[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
actix-files = "0.6.6"
serde_json = "1.0.139"
serde = "1.0.218"
chrono = { version = "0.4.20", features = ["serde"] }
sqlx = { version = "0.8.3", features = ["mysql", "chrono", "runtime-tokio"] }